// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collapse :base 1`] = `
<main>
  <t-collapse
    id="base"
    bind:change="handleChange"
  >
    <wx-view
      class="t-class t-collapse t-collapse--default"
      style=""
    >
      <t-collapse-panel
        id="first"
      >
        <wx-view
          class="t-collapse-panel t-class"
          style=""
        >
          <wx-view
            ariaDisabled="{{false}}"
            ariaExpanded="{{true}}"
            ariaRole="button"
            class="t-collapse-panel__title"
            bind:tap="onClick"
          >
            <t-cell
              tClass="t-collapse-panel__header t-class-header"
              tClassHover="class-header-hover"
              tClassNote="class-note "
              tClassRightIcon="class-right-icon "
              tClassTitle="class-title "
            >
              <wx-view
                ariaLabel=""
                ariaRole=""
                class="t-class t-cell   t-cell--middle"
                hoverClass="t-cell--hover-class"
                hoverStayTime="70"
                style=""
                bind:tap="onClick"
              >
                <wx-view
                  class="t-cell__left t-class-left"
                />
                <wx-view
                  class="t-cell__title t-class-title"
                >
                  <wx-view
                    class="t-cell__title-text"
                  >
                     first 
                  </wx-view>
                  <wx-view
                    class="t-cell__description t-class-description"
                  />
                </wx-view>
                <wx-view
                  class="t-cell__note t-class-note"
                />
                <wx-view
                  class="t-cell__right t-class-right"
                >
                  <t-icon
                    class="t-cell__right-icon t-class-right-icon"
                  >
                    <wx-view
                      ariaHidden="{{false}}"
                      ariaLabel=""
                      ariaRole=""
                      class="t-icon t-class"
                      style=""
                      bind:tap="onTap"
                    >
                      <wx-label
                        class="t-icon-chevron-up t-icon-base"
                      />
                    </wx-view>
                  </t-icon>
                </wx-view>
              </wx-view>
            </t-cell>
          </wx-view>
          <wx-view
            ariaHidden=""
            class="t-collapse-panel__wrapper"
            style="height: 0;"
            bind:transitionend="onTransitionEnd"
          >
            <wx-view
              class="t-collapse-panel__content t-collapse-panel__content--active t-class-content"
            >
              
      
      
              内容1
            </wx-view>
          </wx-view>
        </wx-view>
      </t-collapse-panel>
      <t-collapse-panel
        id="second"
      >
        <wx-view
          class="t-collapse-panel t-class"
          style=""
        >
          <wx-view
            ariaDisabled="{{false}}"
            ariaExpanded="{{false}}"
            ariaRole="button"
            class="t-collapse-panel__title"
            bind:tap="onClick"
          >
            <t-cell
              tClass="t-collapse-panel__header t-class-header"
              tClassHover="class-header-hover"
              tClassNote="class-note "
              tClassRightIcon="class-right-icon "
              tClassTitle="class-title "
            >
              <wx-view
                ariaLabel=""
                ariaRole=""
                class="t-class t-cell   t-cell--middle"
                hoverClass="t-cell--hover-class"
                hoverStayTime="70"
                style=""
                bind:tap="onClick"
              >
                <wx-view
                  class="t-cell__left t-class-left"
                />
                <wx-view
                  class="t-cell__title t-class-title"
                >
                  <wx-view
                    class="t-cell__title-text"
                  >
                     second 
                  </wx-view>
                  <wx-view
                    class="t-cell__description t-class-description"
                  />
                </wx-view>
                <wx-view
                  class="t-cell__note t-class-note"
                />
                <wx-view
                  class="t-cell__right t-class-right"
                >
                  <t-icon
                    class="t-cell__right-icon t-class-right-icon"
                  >
                    <wx-view
                      ariaHidden="{{false}}"
                      ariaLabel=""
                      ariaRole=""
                      class="t-icon t-class"
                      style=""
                      bind:tap="onTap"
                    >
                      <wx-label
                        class="t-icon-chevron-down t-icon-base"
                      />
                    </wx-view>
                  </t-icon>
                </wx-view>
              </wx-view>
            </t-cell>
          </wx-view>
          <wx-view
            ariaHidden="{{true}}"
            class="t-collapse-panel__wrapper"
            style="height: 0;"
            bind:transitionend="onTransitionEnd"
          >
            <wx-view
              class="t-collapse-panel__content t-collapse-panel__content-- t-class-content"
            >
              
      
      
              内容2
            </wx-view>
          </wx-view>
        </wx-view>
      </t-collapse-panel>
    </wx-view>
  </t-collapse>
  <t-collapse
    id="expandAll"
  >
    <wx-view
      class="t-class t-collapse t-collapse--default"
      style=""
    >
      <t-collapse-panel>
        <wx-view
          class="t-collapse-panel t-class"
          style=""
        >
          <wx-view
            ariaDisabled="{{false}}"
            ariaExpanded="{{false}}"
            ariaRole="button"
            class="t-collapse-panel__title"
            bind:tap="onClick"
          >
            <t-cell
              tClass="t-collapse-panel__header t-class-header"
              tClassHover="class-header-hover"
              tClassNote="class-note "
              tClassRightIcon="class-right-icon "
              tClassTitle="class-title "
            >
              <wx-view
                ariaLabel=""
                ariaRole=""
                class="t-class t-cell   t-cell--middle"
                hoverClass="t-cell--hover-class"
                hoverStayTime="70"
                style=""
                bind:tap="onClick"
              >
                <wx-view
                  class="t-cell__left t-class-left"
                />
                <wx-view
                  class="t-cell__title t-class-title"
                >
                  <wx-view
                    class="t-cell__title-text"
                  >
                     first 
                  </wx-view>
                  <wx-view
                    class="t-cell__description t-class-description"
                  />
                </wx-view>
                <wx-view
                  class="t-cell__note t-class-note"
                />
                <wx-view
                  class="t-cell__right t-class-right"
                >
                  <t-icon
                    class="t-cell__right-icon t-class-right-icon"
                  >
                    <wx-view
                      ariaHidden="{{false}}"
                      ariaLabel=""
                      ariaRole=""
                      class="t-icon t-class"
                      style=""
                      bind:tap="onTap"
                    >
                      <wx-label
                        class="t-icon-chevron-down t-icon-base"
                      />
                    </wx-view>
                  </t-icon>
                </wx-view>
              </wx-view>
            </t-cell>
          </wx-view>
          <wx-view
            ariaHidden="{{true}}"
            class="t-collapse-panel__wrapper"
            style="height: 0;"
            bind:transitionend="onTransitionEnd"
          >
            <wx-view
              class="t-collapse-panel__content t-collapse-panel__content-- t-class-content"
            >
              
      
      
              内容1
            </wx-view>
          </wx-view>
        </wx-view>
      </t-collapse-panel>
      <t-collapse-panel>
        <wx-view
          class="t-collapse-panel t-class"
          style=""
        >
          <wx-view
            ariaDisabled="{{false}}"
            ariaExpanded="{{true}}"
            ariaRole="button"
            class="t-collapse-panel__title"
            bind:tap="onClick"
          >
            <t-cell
              tClass="t-collapse-panel__header t-class-header"
              tClassHover="class-header-hover"
              tClassNote="class-note "
              tClassRightIcon="class-right-icon "
              tClassTitle="class-title "
            >
              <wx-view
                ariaLabel=""
                ariaRole=""
                class="t-class t-cell   t-cell--middle"
                hoverClass="t-cell--hover-class"
                hoverStayTime="70"
                style=""
                bind:tap="onClick"
              >
                <wx-view
                  class="t-cell__left t-class-left"
                />
                <wx-view
                  class="t-cell__title t-class-title"
                >
                  <wx-view
                    class="t-cell__title-text"
                  >
                     second 
                  </wx-view>
                  <wx-view
                    class="t-cell__description t-class-description"
                  />
                </wx-view>
                <wx-view
                  class="t-cell__note t-class-note"
                />
                <wx-view
                  class="t-cell__right t-class-right"
                >
                  <t-icon
                    class="t-cell__right-icon t-class-right-icon"
                  >
                    <wx-view
                      ariaHidden="{{false}}"
                      ariaLabel=""
                      ariaRole=""
                      class="t-icon t-class"
                      style=""
                      bind:tap="onTap"
                    >
                      <wx-label
                        class="t-icon-chevron-up t-icon-base"
                      />
                    </wx-view>
                  </t-icon>
                </wx-view>
              </wx-view>
            </t-cell>
          </wx-view>
          <wx-view
            ariaHidden=""
            class="t-collapse-panel__wrapper"
            style="height: 0;"
            bind:transitionend="onTransitionEnd"
          >
            <wx-view
              class="t-collapse-panel__content t-collapse-panel__content--active t-class-content"
            >
              
      
      
              内容2
            </wx-view>
          </wx-view>
        </wx-view>
      </t-collapse-panel>
    </wx-view>
  </t-collapse>
</main>
`;

exports[`collapse :defaultExpandAll 1`] = `
<t-collapse
  id="expandAll"
>
  <wx-view
    class="t-class t-collapse t-collapse--default"
    style=""
  >
    <t-collapse-panel>
      <wx-view
        class="t-collapse-panel t-class"
        style=""
      >
        <wx-view
          ariaDisabled="{{false}}"
          ariaExpanded="{{false}}"
          ariaRole="button"
          class="t-collapse-panel__title"
          bind:tap="onClick"
        >
          <t-cell
            tClass="t-collapse-panel__header t-class-header"
            tClassHover="class-header-hover"
            tClassNote="class-note "
            tClassRightIcon="class-right-icon "
            tClassTitle="class-title "
          >
            <wx-view
              ariaLabel=""
              ariaRole=""
              class="t-class t-cell   t-cell--middle"
              hoverClass="t-cell--hover-class"
              hoverStayTime="70"
              style=""
              bind:tap="onClick"
            >
              <wx-view
                class="t-cell__left t-class-left"
              />
              <wx-view
                class="t-cell__title t-class-title"
              >
                <wx-view
                  class="t-cell__title-text"
                >
                   first 
                </wx-view>
                <wx-view
                  class="t-cell__description t-class-description"
                />
              </wx-view>
              <wx-view
                class="t-cell__note t-class-note"
              />
              <wx-view
                class="t-cell__right t-class-right"
              >
                <t-icon
                  class="t-cell__right-icon t-class-right-icon"
                >
                  <wx-view
                    ariaHidden="{{false}}"
                    ariaLabel=""
                    ariaRole=""
                    class="t-icon t-class"
                    style=""
                    bind:tap="onTap"
                  >
                    <wx-label
                      class="t-icon-chevron-down t-icon-base"
                    />
                  </wx-view>
                </t-icon>
              </wx-view>
            </wx-view>
          </t-cell>
        </wx-view>
        <wx-view
          ariaHidden="{{true}}"
          class="t-collapse-panel__wrapper"
          style="height: 0;"
          bind:transitionend="onTransitionEnd"
        >
          <wx-view
            class="t-collapse-panel__content t-collapse-panel__content-- t-class-content"
          >
            
      
      
            内容1
          </wx-view>
        </wx-view>
      </wx-view>
    </t-collapse-panel>
    <t-collapse-panel>
      <wx-view
        class="t-collapse-panel t-class"
        style=""
      >
        <wx-view
          ariaDisabled="{{false}}"
          ariaExpanded="{{true}}"
          ariaRole="button"
          class="t-collapse-panel__title"
          bind:tap="onClick"
        >
          <t-cell
            tClass="t-collapse-panel__header t-class-header"
            tClassHover="class-header-hover"
            tClassNote="class-note "
            tClassRightIcon="class-right-icon "
            tClassTitle="class-title "
          >
            <wx-view
              ariaLabel=""
              ariaRole=""
              class="t-class t-cell   t-cell--middle"
              hoverClass="t-cell--hover-class"
              hoverStayTime="70"
              style=""
              bind:tap="onClick"
            >
              <wx-view
                class="t-cell__left t-class-left"
              />
              <wx-view
                class="t-cell__title t-class-title"
              >
                <wx-view
                  class="t-cell__title-text"
                >
                   second 
                </wx-view>
                <wx-view
                  class="t-cell__description t-class-description"
                />
              </wx-view>
              <wx-view
                class="t-cell__note t-class-note"
              />
              <wx-view
                class="t-cell__right t-class-right"
              >
                <t-icon
                  class="t-cell__right-icon t-class-right-icon"
                >
                  <wx-view
                    ariaHidden="{{false}}"
                    ariaLabel=""
                    ariaRole=""
                    class="t-icon t-class"
                    style=""
                    bind:tap="onTap"
                  >
                    <wx-label
                      class="t-icon-chevron-up t-icon-base"
                    />
                  </wx-view>
                </t-icon>
              </wx-view>
            </wx-view>
          </t-cell>
        </wx-view>
        <wx-view
          ariaHidden=""
          class="t-collapse-panel__wrapper"
          style="height: 0;"
          bind:transitionend="onTransitionEnd"
        >
          <wx-view
            class="t-collapse-panel__content t-collapse-panel__content--active t-class-content"
          >
            
      
      
            内容2
          </wx-view>
        </wx-view>
      </wx-view>
    </t-collapse-panel>
  </wx-view>
</t-collapse>
`;

exports[`collapse :disabled 1`] = `
<t-collapse
  id="base"
  bind:change="handleChange"
>
  <wx-view
    class="t-class t-collapse t-collapse--default"
    style=""
  >
    <t-collapse-panel
      id="first"
    >
      <wx-view
        class="t-collapse-panel t-class"
        style=""
      >
        <wx-view
          ariaDisabled="{{false}}"
          ariaExpanded="{{true}}"
          ariaRole="button"
          class="t-collapse-panel__title"
          bind:tap="onClick"
        >
          <t-cell
            tClass="t-collapse-panel__header t-class-header"
            tClassHover="class-header-hover"
            tClassNote="class-note "
            tClassRightIcon="class-right-icon "
            tClassTitle="class-title "
          >
            <wx-view
              ariaLabel=""
              ariaRole=""
              class="t-class t-cell   t-cell--middle"
              hoverClass="t-cell--hover-class"
              hoverStayTime="70"
              style=""
              bind:tap="onClick"
            >
              <wx-view
                class="t-cell__left t-class-left"
              />
              <wx-view
                class="t-cell__title t-class-title"
              >
                <wx-view
                  class="t-cell__title-text"
                >
                   first 
                </wx-view>
                <wx-view
                  class="t-cell__description t-class-description"
                />
              </wx-view>
              <wx-view
                class="t-cell__note t-class-note"
              />
              <wx-view
                class="t-cell__right t-class-right"
              >
                <t-icon
                  class="t-cell__right-icon t-class-right-icon"
                >
                  <wx-view
                    ariaHidden="{{false}}"
                    ariaLabel=""
                    ariaRole=""
                    class="t-icon t-class"
                    style=""
                    bind:tap="onTap"
                  >
                    <wx-label
                      class="t-icon-chevron-up t-icon-base"
                    />
                  </wx-view>
                </t-icon>
              </wx-view>
            </wx-view>
          </t-cell>
        </wx-view>
        <wx-view
          ariaHidden=""
          class="t-collapse-panel__wrapper"
          style="height: auto;"
          bind:transitionend="onTransitionEnd"
        >
          <wx-view
            class="t-collapse-panel__content t-collapse-panel__content--active t-class-content"
          >
            
      
      
            内容1
          </wx-view>
        </wx-view>
      </wx-view>
    </t-collapse-panel>
    <t-collapse-panel
      id="second"
    >
      <wx-view
        class="t-collapse-panel t-class"
        style=""
      >
        <wx-view
          ariaDisabled="{{false}}"
          ariaExpanded="{{false}}"
          ariaRole="button"
          class="t-collapse-panel__title"
          bind:tap="onClick"
        >
          <t-cell
            tClass="t-collapse-panel__header t-class-header"
            tClassHover="class-header-hover"
            tClassNote="class-note "
            tClassRightIcon="class-right-icon "
            tClassTitle="class-title "
          >
            <wx-view
              ariaLabel=""
              ariaRole=""
              class="t-class t-cell   t-cell--middle"
              hoverClass="t-cell--hover-class"
              hoverStayTime="70"
              style=""
              bind:tap="onClick"
            >
              <wx-view
                class="t-cell__left t-class-left"
              />
              <wx-view
                class="t-cell__title t-class-title"
              >
                <wx-view
                  class="t-cell__title-text"
                >
                   second 
                </wx-view>
                <wx-view
                  class="t-cell__description t-class-description"
                />
              </wx-view>
              <wx-view
                class="t-cell__note t-class-note"
              />
              <wx-view
                class="t-cell__right t-class-right"
              >
                <t-icon
                  class="t-cell__right-icon t-class-right-icon"
                >
                  <wx-view
                    ariaHidden="{{false}}"
                    ariaLabel=""
                    ariaRole=""
                    class="t-icon t-class"
                    style=""
                    bind:tap="onTap"
                  >
                    <wx-label
                      class="t-icon-chevron-down t-icon-base"
                    />
                  </wx-view>
                </t-icon>
              </wx-view>
            </wx-view>
          </t-cell>
        </wx-view>
        <wx-view
          ariaHidden="{{true}}"
          class="t-collapse-panel__wrapper"
          style="height: 0;"
          bind:transitionend="onTransitionEnd"
        >
          <wx-view
            class="t-collapse-panel__content t-collapse-panel__content-- t-class-content"
          >
            
      
      
            内容2
          </wx-view>
        </wx-view>
      </wx-view>
    </t-collapse-panel>
  </wx-view>
</t-collapse>
`;
